@@ -18,25 +18,16 @@ bootRun{
 	jvmArgs=['-Xlog:codecache+sweep*=trace,class+unload,class+load,os+thread,safepoint,gc*,gc+stringdedup=debug,gc+ergo=trace,gc+age=trace,gc+phases=trace,gc+humongous=trace,jit+compilation=debug:file=/home/mw/thread_dump/mwapp.log:level,tags,time,uptime:filesize=104857600,filecount=5']
 
 }
-/*tasks.withType(JavaCompile){
-	options.compilerArgs+=['-XX:+PrintGCDetails','-Xlogoggc:./gc.log']
-}*/
 
 repositories {
 	mavenCentral()
 }
 
 dependencies {
-	/*implementation 'io.dropwizard.metrics:metrics-core:4.1.18'
-	implementation 'io.dropwizard.metrics:metrics-graphite:4.1.18'
-	implementation 'io.dropwizard.metrics:metrics-jvm:4.1.18'
-	implementation 'com.ryantenney.metrics:metrics-spring:3.1.3'*/
-
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	compileOnly 'org.projectlombok:lombok'
-	/*runtimeOnly 'io.micrometer:micrometer-registry-graphite'*/
 	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
